@@ -67,7 +67,8 @@ class TrytonConfigParser(configparser.RawConfigParser):
         self.set('email', 'uri', 'smtp://localhost:25')
         self.add_section('session')
         self.set('session', 'authentications', 'password')
-        self.set('session', 'timeout', 600)
+        self.set('session', 'max_age', 60 * 60 * 24 * 30)
+        self.set('session', 'timeout', 60 * 5)
         self.set('session', 'max_attempt', 5)
         self.set('session', 'max_attempt_ip_network', 300)
         self.set('session', 'ip_network_4', 32)
