@@ -69,13 +69,13 @@ class Session(ModelSQL):
     @classmethod
     def check(cls, user, key, domain=None):
         """
-        Check user key and delete old one.
+        Check user key against max_age and delete old one.
         Return True if key is still valid, False if the key is expired and None
         if the key does not exist.
         """
         now = datetime.datetime.now()
         timeout = datetime.timedelta(
-            seconds=config.getint('session', 'timeout'))
+            seconds=config.getint('session', 'max_age'))
         sessions = cls.search([
                 ('create_uid', '=', user),
                 domain or [],
@@ -83,8 +83,7 @@ class Session(ModelSQL):
         find = None
         to_delete = []
         for session in sessions:
-            timestamp = session.write_date or session.create_date
-            if abs(timestamp - now) < timeout:
+            if abs(session.create_date - now) < timeout:
                 if session.key == key:
                     find = True
             else:
@@ -95,13 +94,50 @@ class Session(ModelSQL):
         return find
 
     @classmethod
+    def check_timeout(cls, user, key, domain=None):
+        """
+        Check user key against timeout.
+        Return True if key is still valid otherwise the key is deleted.
+        """
+        now = datetime.datetime.now()
+        timeout = datetime.timedelta(
+            seconds=config.getint('session', 'timeout'))
+        session, = cls.search([
+                ('create_uid', '=', user),
+                ('key', '=', key),
+                domain or [],
+                ], limit=1)
+        timestamp = session.write_date or session.create_date
+        valid = abs(timestamp - now) < timeout
+        if not valid:
+            cls.delete([session])
+        return valid
+
+    @classmethod
     def reset(cls, key, domain=None):
         "Reset key session timestamp"
+        now = datetime.datetime.now()
+        timeout = datetime.timedelta(
+            seconds=config.getint('session', 'timeout'))
+        timestamp = now - timeout
         sessions = cls.search([
                 ('key', '=', key),
+                ['OR',
+                    ('create_date', '>=', timestamp),
+                    ('write_date', '>=', timestamp),
+                    ],
                 domain or [],
                 ])
         cls.write(sessions, {})
+
+    @classmethod
+    def clear(cls, users, domain=None):
+        "Clear all sessions for users"
+        sessions = cls.search([
+                ('create_uid', 'in', users),
+                domain or [],
+                ])
+        cls.delete(sessions)
 
     @classmethod
     def create(cls, vlist):
