@@ -100,3 +100,35 @@ def check(dbname, user, session, context=None):
         logger.debug("session valid for '%s' from '%s' on database '%s'",
             user, _get_remote_addr(context), dbname)
         return user
+
+
+def check_timeout(dbname, user, session, context=None):
+    DatabaseOperationalError = backend.get('DatabaseOperationalError')
+    for count in range(config.getint('database', 'retry'), -1, -1):
+        with Transaction().start(dbname, user, context=context) as transaction:
+            pool = _get_pool(dbname)
+            Session = pool.get('ir.session')
+            try:
+                valid = Session.check_timeout(user, session)
+                break
+            except DatabaseOperationalError:
+                if count:
+                    continue
+                raise
+            finally:
+                transaction.commit()
+    if not valid:
+        logger.info("session timeout for '%s' from '%s' on database '%s'",
+            user, _get_remote_addr(context), dbname)
+    return valid
+
+
+def reset(dbname, session, context):
+    DatabaseOperationalError = backend.get('DatabaseOperationalError')
+    try:
+        with Transaction().start(dbname, 0, context=context):
+            pool = _get_pool(dbname)
+            Session = pool.get('ir.session')
+            Session.reset(session)
+    except DatabaseOperationalError:
+        logger.debug('Reset session failed', exc_info=True)
