@@ -1,3 +1,5 @@
+* Clear existing session when password is changed
+* Manage session with max_age and timeout
 * Use passlib to hash and update password
 * Remove unique constraint on attachment name
 * New icons
